# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
alembic/: env.py
alembic/versions/: 2024_04_05_1154-fe710f56c56a_.py  2024_04_05_1314-c5c0684cbff6_.py
app/: db.py  deps.py  dto.py  exception_handlers.py  exceptions.py  main.py  orm.py  prompt.py  views.py
app/base/: auth.py  config.py  db.py  provider.py  utils.py
app/repositories/: user.py
app/services/: user.py
app/views/: __init__.py  user.py
scripts/: dev.sh  down.sh  run-server.sh  test.sh  up.sh
tests/: conftest.py
tests/views/: test_user.py
